--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,7 +1,7 @@
 .backdrop {
   position: fixed;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0.85);
+  background-color: rgba(0, 0, 0, 0.65);
   z-index: 190;
   display: flex;
   justify-content: center;
@@ -22,6 +22,10 @@
   position: relative;
   &:dir(rtl) {
     font-family: "OHSavyonChenKipper", sans-serif;
+  }
+
+  @media (max-height: 400px) {
+    top: calc(var(--header-height) - 3rem);
   }
 
   @media (max-width: 768px) {
@@ -107,6 +111,9 @@
   @media (max-width: 768px) {
     top: 1rem;
     left: 1rem;
+    &.scrollbar {
+      left: 2rem;
+    }
   }
 
   &:dir(ltr) {
@@ -114,7 +121,9 @@
     right: 3rem;
 
     @media (max-width: 768px) {
-      right: 1rem;
+      &.scrollbar {
+        right: 2rem;
+      }
     }
   }
 }
