--- a/src/components/Book/Page/PageContent/PageContent.module.css
+++ b/src/components/Book/Page/PageContent/PageContent.module.css
@@ -19,10 +19,8 @@
   margin-bottom: 2rem;
   color: var(--page-text-color);
   text-align: justify;
-  line-height: 1;
 
   &:dir(ltr) {
-    line-height: 1.2;
     font-size: 1.5rem;
     padding-top: 0.8rem;
   }
@@ -30,9 +28,5 @@
 
 button.button {
   font-size: 1.5rem;
-
-  &:dir(rtl) {
-    font-size: 2rem;
-    padding: 0.4rem 1.6rem 0.8rem 1.6rem;
-  }
+  padding: 0.4rem 0.8rem;
 }
