--- a/src/components/Header/MobileNav/MobileNav.module.css
+++ b/src/components/Header/MobileNav/MobileNav.module.css
@@ -79,9 +79,7 @@
   height: 100%;
   width: 100%;
   padding-top: calc(var(--header-height) + 1rem);
-  &:dir(rtl) {
-    font-family: "OHSavyonChenKipper", sans-serif;
-  }
+  font-family: "Header-font", sans-serif;
 }
 
 .mobileNav > li {
@@ -95,9 +93,7 @@
   transform: translateX(50px);
   & > a {
     font-size: 4rem;
-    line-height: 1;
     padding-bottom: 1rem;
-    padding-top: 0rem;
   }
 }
 
