--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -5,11 +5,34 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  color: white;
   z-index: 300;
   padding: 0 1.6rem 0.8rem 1.6rem;
-  background-color: rgba(51, 51, 51, 0.8);
+  color: var(--white);
   min-height: var(--header-height);
+
+  .logoContainer {
+    position: relative;
+    width: 4.5rem;
+    height: 4.5rem;
+    margin-right: 2rem;
+    cursor: pointer;
+
+    &:dir(rtl) {
+      margin-left: 2rem;
+      margin-right: 0;
+      @media (max-width: 768px) {
+        margin-left: 0;
+        margin-right: 1.8rem;
+      }
+    }
+
+    @media (max-width: 768px) {
+      margin-left: 1.8rem;
+      margin-right: 0;
+      width: 5.5rem;
+      height: 5.5rem;
+    }
+  }
 
   @media (max-width: 768px) {
     &:dir(ltr) {
