--- a/src/components/LanguageInput/LanguageInput.module.css
+++ b/src/components/LanguageInput/LanguageInput.module.css
@@ -7,14 +7,12 @@
 .language {
   cursor: pointer;
   text-transform: uppercase;
-  font-size: 1.5rem;
-  &:dir(rtl) {
-    padding-top: 1rem;
-  }
+  font-size: 2rem;
+  padding-top: 0.5rem;
 
   &:dir(ltr) {
+    line-height: 1;
     font-size: 3rem;
-    font-family: "OHSavyonChenKipper", sans-serif;
   }
 
   @media (max-width: 768px) {
