--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,13 +4,14 @@
   --dark-red: #b21d1d;
   --white: #f0f0f0;
   --black: #1a1a1a;
+  --header-text: #393a3a;
   --link: #0070f3;
   --light-grey: #f5f5f5;
   --light-blue: #66b3ff8a;
   --image-background: #333333;
   --page-background: #f5f5f5;
   --page-text-color: #4d4d4d;
-  --social-hover: #ff6f00;
+  --social-hover: #bc6666;
   --footer-height: 6rem;
   --footer-height-mobile: 2rem;
   --header-height: 6.2rem;
