--- a/src/app/[locale]/about/page.module.css
+++ b/src/app/[locale]/about/page.module.css
@@ -19,7 +19,7 @@
     & > h2,
     & > span {
       font-size: 3rem;
-      color: var(--page-text-color);
+      color: var(--header-text);
     }
 
     &:dir(rtl) {
@@ -35,7 +35,7 @@
 
 .imageContainer {
   position: relative;
-  min-height: 25rem;
+  min-height: 30rem;
   width: 25rem;
 }
 
