--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,40 +6,48 @@
   justify-content: space-between;
   align-items: center;
   z-index: 300;
-  padding: 0 1.6rem 0.8rem 1.6rem;
   color: var(--white);
   min-height: var(--header-height);
 
-  .logoContainer {
-    position: relative;
-    width: 4.5rem;
-    height: 4.5rem;
-    margin-right: 2rem;
-    cursor: pointer;
+  padding-left: 2rem;
+  padding-right: 1rem;
 
-    &:dir(rtl) {
-      margin-left: 2rem;
-      margin-right: 0;
-      @media (max-width: 768px) {
-        margin-left: 0;
-        margin-right: 1.8rem;
-      }
-    }
-
-    @media (max-width: 768px) {
-      margin-left: 1.8rem;
-      margin-right: 0;
-      width: 5.5rem;
-      height: 5.5rem;
-    }
+  &:dir(ltr) {
+    padding-left: 1rem;
+    padding-right: 2rem;
   }
 
-  @media (max-width: 768px) {
+  .mobile {
+    padding: 0 1rem;
+  }
+
+  .logoContainer {
+    position: relative;
+    width: 5.5rem;
+    height: 5.5rem;
+    cursor: pointer;
+
     &:dir(ltr) {
-      padding-left: 0.8rem;
+      margin-right: 3rem;
     }
+
     &:dir(rtl) {
-      padding-right: 0rem;
+      margin-left: 3rem;
+    }
+  }
+  &.mobile > .logoContainer {
+    &:dir(ltr) {
+      margin-right: 0;
+      margin-left: 3rem;
+    }
+
+    &:dir(rtl) {
+      margin-left: 0;
+      margin-right: 6rem;
+
+      @media (max-width: 768px) {
+        margin-right: 4rem;
+      }
     }
   }
 }
