--- a/src/app/[locale]/page.module.css
+++ b/src/app/[locale]/page.module.css
@@ -1,3 +1,11 @@
+.container {
+  padding: 0 2rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .header {
   font-size: 4rem;
   margin-top: 1rem;
@@ -6,12 +14,12 @@
 
 .imageContainer {
   position: relative;
-  width: 70%;
+  width: 70.7rem;
   min-height: 40rem;
   margin-bottom: 2rem;
 
   @media (max-width: 768px) {
     min-height: 25rem;
-    width: 80%;
+    width: 44.2rem;
   }
 }
