--- a/src/components/Book/TableOfContents/TableOfContents.module.css
+++ b/src/components/Book/TableOfContents/TableOfContents.module.css
@@ -47,6 +47,7 @@
 
 .tocButton {
   border: none;
+  background: transparent;
   color: var(--page-text-color);
   font-size: 1.5rem;
   padding: 0.4rem 0;
