--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -40,6 +40,10 @@
   flex-grow: 1;
   overflow-x: hidden;
 
+  &.center {
+    align-items: center;
+  }
+
   @media (max-width: 768px) {
     gap: 0;
     padding: 0.5rem;
