--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -78,14 +78,17 @@
   transition: all 0.3s ease;
   background-color: transparent;
 
-  @media (max-width: 768px) {
-    top: 1.5rem;
-    left: 1rem;
-  }
-
   &:dir(ltr) {
     left: auto;
     right: 3rem;
+  }
+
+  @media (max-width: 768px) {
+    top: 1.5rem;
+    left: 1rem;
+    &:dir(ltr) {
+      right: 1rem;
+    }
   }
 }
 
