Update header color in a different way

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,6 +8,7 @@
   z-index: 300;
   color: var(--white);
   min-height: var(--header-height);
+  background-color: var(--image-background);
 
   padding-left: 2rem;
   padding-right: 1rem;
