--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -22,6 +22,7 @@
   max-height: 100%;
   position: relative;
   font-family: "Header-font", sans-serif;
+  border-color: transparent;
 
   @media (max-height: 400px) {
     top: calc(var(--header-height) - 3rem);
