--- a/src/app/[locale]/error.module.css
+++ b/src/app/[locale]/error.module.css
@@ -4,7 +4,7 @@
 
 .header {
   font-size: 6rem;
-  color: var(--header-text);
+  color: var(--red);
 }
 
 .text {
@@ -34,4 +34,7 @@
       }
     }
   }
+}
+.link {
+  color: var(--red);
 }
