--- a/src/components/Book/Page/PageContent/PageContent.module.css
+++ b/src/components/Book/Page/PageContent/PageContent.module.css
@@ -18,7 +18,7 @@
   font-size: 1.5rem;
   margin-bottom: 2rem;
   color: var(--page-text-color);
-  text-align: justify;
+  text-align: start;
   padding-top: 0.4rem;
 }
 
