--- a/src/components/Book/TableOfContents/TableOfContents.module.css
+++ b/src/components/Book/TableOfContents/TableOfContents.module.css
@@ -53,7 +53,7 @@
   padding: 0.4rem 0;
   cursor: pointer;
   width: 100%;
-  text-align: justify;
+  text-align: start;
   font-family: "Header-font", sans-serif;
 }
 
