--- a/src/components/Book/TableOfContents/TableOfContents.module.css
+++ b/src/components/Book/TableOfContents/TableOfContents.module.css
@@ -3,9 +3,6 @@
 }
 
 .tocList {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
   display: flex;
   flex-direction: column;
   &:dir(rtl) {
@@ -14,17 +11,11 @@
 }
 
 .tocItem {
-  display: flex;
-  align-items: center;
-}
-
-.tocEntry {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  align-items: center;
   position: relative;
-  padding: 0 0.4rem;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+
   &:hover {
     .tocButton,
     .pageNumber {
@@ -33,16 +24,14 @@
   }
 }
 
-.tocEntry::after {
+.tocItem::after {
   content: "";
   position: absolute;
   left: 0;
-  right: 0;
   bottom: 0;
   border-bottom: 1px dotted var(--page-text-color);
   width: 100%;
   display: block;
-  pointer-events: none;
 }
 
 .tocButton {
@@ -50,20 +39,14 @@
   background: transparent;
   color: var(--page-text-color);
   font-size: 1.5rem;
-  padding: 0.4rem 0;
-  cursor: pointer;
   width: 100%;
   text-align: start;
   font-family: "Header-font", sans-serif;
 }
 
-.tocTitle {
-  flex-grow: 1;
-  white-space: nowrap;
-}
-
 .pageNumber {
   font-size: 1.8rem;
   color: var(--page-text-color);
-  white-space: nowrap;
+  line-height: 1.2;
+  font-family: "Header-font", sans-serif;
 }
