--- a/src/components/Header/MobileNav/MobileNav.module.css
+++ b/src/components/Header/MobileNav/MobileNav.module.css
@@ -46,12 +46,17 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 80%;
+  width: 100%;
   height: 100vh;
   visibility: hidden;
   opacity: 0;
   transition: all 0.3s ease-in-out;
   transform: translateX(-100%);
+}
+
+.openNav {
+  width: 80%;
+  height: 100%;
 }
 
 .open .menuContainer {
