--- a/src/components/UsersBook/UsersBook.module.css
+++ b/src/components/UsersBook/UsersBook.module.css
@@ -1,5 +1,7 @@
 .noComment {
-  padding-top: 2rem;
+  padding: 0 2rem;
+  padding-top: 1rem;
+  padding-bottom: 0;
   display: flex;
   flex-direction: column;
   color: var(--red);
