--- a/src/components/Book/NewBook/NewBook.module.css
+++ b/src/components/Book/NewBook/NewBook.module.css
@@ -4,6 +4,7 @@
   flex-grow: 1;
   text-align: start;
   padding: 2.4rem;
+  padding-top: 4.8rem;
 
   @media only screen and (min-width: 1250px) {
     width: 90%;
@@ -22,7 +23,6 @@
   position: relative;
   transform-style: preserve-3d;
   transition: transform 1s;
-  margin-top: 2rem;
 }
 
 .page {
@@ -31,6 +31,7 @@
   left: 0;
   width: 50%;
   height: 100%;
+  touch-action: none;
   &.right:not(.onePage) {
     left: 50%;
   }
