--- a/src/app/book.css
+++ b/src/app/book.css
@@ -7,15 +7,7 @@
   border-radius: 0.4rem;
   padding: 0.5rem 2rem;
 
-  &.left {
-    box-shadow: inset -7px 0 30px -7px rgba(0, 0, 0, 0.4),
-      7px 0 30px -7px rgba(0, 0, 0, 0.4);
-  }
-
-  &.right {
-    box-shadow: inset 7px 0 30px -7px rgba(0, 0, 0, 0.4),
-      7px 0 30px -7px rgba(0, 0, 0, 0.4);
-  }
+  box-shadow: inset 0px 0px 28px 3px rgba(0, 0, 0, 0.4);
 }
 
 .pageHeader {
