--- a/src/components/Book/Controls/Controls.module.css
+++ b/src/components/Book/Controls/Controls.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  margin-top: 1.6rem;
+  padding-top: 1.6rem;
 }
 
 .pageCount {
