--- a/src/components/Book/NewBook/NewBook.module.css
+++ b/src/components/Book/NewBook/NewBook.module.css
@@ -4,7 +4,6 @@
   flex-grow: 1;
   text-align: start;
   padding: 2.4rem;
-  padding-top: 4.8rem;
 
   @media only screen and (min-width: 1250px) {
     width: 90%;
@@ -20,7 +19,44 @@
 }
 
 .book {
-  position: relative;
   transform-style: preserve-3d;
   transition: transform 1s;
+  position: relative;
+}
+
+.wrapper {
+  width: 100%;
+  height: 100%;
+}
+
+.pageContainer {
+  height: 100%;
+  position: absolute;
+  top: 0;
+  width: 50%;
+  &.onePage {
+    width: 100%;
+  }
+  &.right:not(.onePage) {
+    left: 50%;
+  }
+}
+
+.page {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  touch-action: none;
+  z-index: 5;
+
+  perspective: 1500px;
+
+  &.below {
+    z-index: 4;
+  }
+  &.back {
+    z-index: 3;
+  }
 }
