Added rtl support

--- a/src/components/FlipBook/Style/stPageFlip.css
+++ b/src/components/FlipBook/Style/stPageFlip.css
@@ -51,3 +51,10 @@
   left: 0;
   top: 0;
 }
+
+.stf__wrapper.--rtl {
+  transform: scaleX(-1);
+}
+.stf__wrapper.--rtl .stf__item > * {
+  transform: scaleX(-1);
+}
