--- a/src/components/Book/NewBook/AnimatedPage/AnimatedPage.module.css
+++ b/src/components/Book/NewBook/AnimatedPage/AnimatedPage.module.css
@@ -5,7 +5,7 @@
   width: 50%;
   height: 100%;
   touch-action: none;
-  /* transform-style: preserve-3d; */
+  transform-style: preserve-3d;
   user-select: none;
 
   &.onePage {
@@ -23,6 +23,8 @@
   left: 0;
   width: 100%;
   height: 100%;
+  transform-style: preserve-3d;
+
   &.below {
     z-index: 4;
   }
