--- a/src/app/book.css
+++ b/src/app/book.css
@@ -1,7 +1,6 @@
 .bookPage {
   position: absolute;
   width: 100%;
-  transform-origin: center;
   background-color: var(--page-background);
   border-radius: 0.4rem;
   display: flex;
@@ -22,6 +21,11 @@
     box-shadow: inset 7px 0 30px -7px rgba(0, 0, 0, 0.4),
       7px 0 30px -7px rgba(0, 0, 0, 0.4);
   }
+
+  &.singlePage {
+    box-shadow: inset 0 0 30px 0 rgba(0, 0, 0, 0.4),
+      10px 0 8px 0 rgba(0, 0, 0, 0.4);
+  }
 }
 
 .pageHeader {
@@ -33,12 +37,11 @@
 .pageContent {
   text-align: center;
   width: 100%;
-  height: 95%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   overflow: auto;
   overflow-x: hidden;
-
   @media (max-width: 1024px) {
     height: 90%;
   }
