--- a/src/components/Book/Controls/Controls.module.css
+++ b/src/components/Book/Controls/Controls.module.css
@@ -12,12 +12,17 @@
   align-items: center;
   justify-content: center;
   background-color: var(--red);
-  font-size: 2.4rem;
-  padding: 0 0.8rem;
+  font-size: 2.8rem;
   border-radius: 0.4rem;
   min-width: 9rem;
+  padding-top: 0.4rem;
 
   &:dir(rtl) {
     flex-direction: row-reverse;
   }
+}
+
+.height {
+  line-height: 1;
+  height: 3.2rem;
 }
