--- a/src/components/Book/PageCover/PageCover.module.css
+++ b/src/components/Book/PageCover/PageCover.module.css
@@ -3,6 +3,8 @@
   font-size: 3.5rem;
   padding: 2rem;
   line-height: 1;
+  box-shadow: inset 0 0 30px 0 rgba(0, 0, 0, 0.4),
+    10px 0 8px 0 rgba(0, 0, 0, 0.4);
 }
 
 .author {
