--- a/src/components/Book/NewBook/AnimatedPage/AnimatedPage.module.css
+++ b/src/components/Book/NewBook/AnimatedPage/AnimatedPage.module.css
@@ -24,6 +24,11 @@
   width: 100%;
   height: 100%;
   transform-style: preserve-3d;
+  z-index: 3;
+
+  &.back {
+    z-index: 2;
+  }
 
   &.below {
     z-index: 1;
