--- a/src/components/Book/NewBook/AnimatedPage/AnimatedPage.module.css
+++ b/src/components/Book/NewBook/AnimatedPage/AnimatedPage.module.css
@@ -42,7 +42,13 @@
   left: 50%;
   transform-origin: 0px 0px;
   height: 100%;
-  z-index: 7;
+  z-index: 10;
+  &.hard {
+    z-index: 6;
+    &.inner {
+      z-index: 10;
+    }
+  }
 
   &.onePage {
     left: 0;
