--- a/src/app/book.css
+++ b/src/app/book.css
@@ -1,6 +1,7 @@
 .bookPage {
   position: absolute;
   width: 100%;
+  height: 100%;
   background-color: var(--page-background);
   border-radius: 0.4rem;
   display: flex;
