--- a/src/components/BaseLayout/BaseLayout.module.css
+++ b/src/components/BaseLayout/BaseLayout.module.css
@@ -3,6 +3,7 @@
   padding-top: var(--header-height);
   overflow: hidden;
   width: 100%;
+  min-height: 100%;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   flex: 1;
   display: flex;
