--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -4,6 +4,8 @@
   width: 100%;
   padding: 2.4rem;
   flex: 1;
+  touch-action: pan-x pinch-zoom;
+  overflow: hidden;
 
   @media only screen and (min-width: 1250px) {
     width: 90%;
