--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -4,7 +4,7 @@
   width: 100%;
   padding: 2.4rem;
   flex: 1;
-  touch-action: pan-x pinch-zoom;
+  touch-action: pinch-zoom;
   overflow: hidden;
 
   @media only screen and (min-width: 1250px) {
