try to solve scrolling in another way

--- a/src/components/Book/Book.module.css
+++ b/src/components/Book/Book.module.css
@@ -4,8 +4,10 @@
   width: 100%;
   padding: 2.4rem;
   flex: 1;
-  touch-action: pinch-zoom;
+  touch-action: none;
   overflow: hidden;
+  overscroll-behavior: none;
+  -webkit-overflow-scrolling: none;
 
   @media only screen and (min-width: 1250px) {
     width: 90%;
