--- a/src/components/Book/Page/PageContent/PageContent.module.css
+++ b/src/components/Book/Page/PageContent/PageContent.module.css
@@ -3,15 +3,15 @@
   background-color: var(--image-background);
   padding: 1.6rem 0;
   border-radius: 0.4rem;
+  display: flex;
+  justify-content: center;
 }
 
 .pageImage {
-  position: relative;
-  min-height: 25rem;
-  width: 30rem;
+  display: flex;
+  justify-content: center;
   margin-bottom: 1rem;
   border-radius: 0.4rem;
-  margin: 0 auto;
 }
 
 .pageText {
